# systemc-cmake

./: CMakeLists.txt  build.sh
src/: makeclock.cpp
